# cpp-torchscript-inference

./: README.md
cpp-torchscript-inference/: CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  batch_inference.cpp  benchmark_inference.cpp  build.bat  build.sh  run_inference.sh  simple_inference.cpp
cpp-torchscript-inference/examples/: run_examples.sh
cpp-torchscript-inference/sample_data/: README.md
